# FFBChecker

./: CMakeLists.txt  FFBChecker.pro  LICENSE  README.md  TODO.txt  conditioneffectsettings.cpp  conditioneffectsettings.h  conditioneffectsettings.ui  constanteffectsettings.cpp  constanteffectsettings.h  constanteffectsettings.ui  deviceprober.cpp  deviceprober.h  effectsettings.cpp  effectsettings.h  envelopesettings.cpp  envelopesettings.h  envelopesettings.ui  ffbconditioneffect.cpp  ffbconditioneffect.h  ffbconditioneffectparameters.cpp  ffbconditioneffectparameters.h  ffbconstanteffect.cpp  ffbconstanteffect.h  ffbconstanteffectparameters.cpp  ffbconstanteffectparameters.h  ffbdevice.cpp  ffbdevice.h  ffbeffect.cpp  ffbeffect.h  ffbeffectfactory.cpp  ffbeffectfactory.h  ffbeffectparameters.cpp  ffbeffectparameters.h  ffbenvelopeparameters.cpp  ffbenvelopeparameters.h  ffbnulleffect.cpp  ffbnulleffect.h  ffbperiodiceffect.cpp  ffbperiodiceffect.h  (+61 more)
